--- a/frontmatter/preface-mulam.tex
+++ b/frontmatter/preface-mulam.tex
@@ -67,7 +67,8 @@ July 22, 2025
 
 \centerline{\large \textbf{Acknowledgments}}
 
-\textsf{\scriptsize Really grateful to all the selfless volunteers who have scanned various old texts, performed OCR, uploaded on wikisource and other repositories. What I present here is a compilation of several such texts. Also very grateful to wisdomlib.org for some fantastic indices (and translations) to the Puranas, which enabled an easier search. This is an ongoing work, and I will continue to add more texts (incl. Skanda Purana, Brahmavaivarta Purana, etc.) as I find time to typeset them. I initially began proofreading the texts as I inserted them, but could not keep pace, especially as I encountered some of the massive texts like Padma Puranam --- in the fullness of time, and with the grace of Bhagavan Rama, hope that this project will see fruition at some point. But it's always important to get the version 0.1 going. Jaya Shri Rama!}
+\textsf{\scriptsize Really grateful to all the selfless volunteers who have scanned various old texts, performed OCR, uploaded on wikisource and other repositories. What I present here is a compilation of several such texts. Also very grateful to wisdomlib.org for some fantastic indices (and translations) to the Puranas, which enabled an easier search. %This is an ongoing work, and I will continue to add more texts (incl. Skanda Purana, Brahmavaivarta Purana, etc.) as I find time to typeset them.
+ I initially began proofreading the texts as I inserted them, but could not keep pace, especially as I encountered some of the massive texts like Padma Puranam --- in the fullness of time, and with the grace of Bhagavan Rama, hope that this project will see fruition at some point. But it's always important to get the version 0.1 going. Jaya Shri Rama!}
 
 \bigskip
 
