--- a/ramayana-ratnakara-mulam.tex
+++ b/ramayana-ratnakara-mulam.tex
@@ -69,6 +69,13 @@
     \input{rama-charitam/vishnu-puranam/vishnu-puranam-ramayanam}
     \input{rama-charitam/harivamsha/ramakatha}
     \input{rama-charitam/naradiya-puranam/lakshmanachala-mahatmayam}
+    \chapt{रघुवंशः}
+    \input{rama-charitam/raghuvamsha/sarga-10.tex}
+    \input{rama-charitam/raghuvamsha/sarga-11.tex}
+    \input{rama-charitam/raghuvamsha/sarga-12.tex}
+    \input{rama-charitam/raghuvamsha/sarga-13.tex}
+    \input{rama-charitam/raghuvamsha/sarga-14.tex}
+    \input{rama-charitam/raghuvamsha/sarga-15.tex}
     
     \part{रामायणान्तर्गताः कथाः}
     \input{katha/devi-bhagavatam/vedavati-charitram}
