--- a/rama-charitam/raghuvamsha/raghuvamsha-giirvaani.tex
+++ b/rama-charitam/raghuvamsha/raghuvamsha-giirvaani.tex
@@ -78,6 +78,10 @@
 {अमेयो मितलोकस्त्वमनर्थी प्रार्थनावहः}
 {अजितो जिष्णुरत्यन्तमव्यक्तो व्यक्तकारणम्} % १०-१८
 
+\twolineshloka*
+{एकः कारणतस्तां तामवस्थां प्रतिपद्यसे}
+{नानात्वं रागसंयोगात्स्फटिकस्य्ऽएव ते स्मृतम्} % १०-१८*
+
 \twolineshloka
 {हृदयस्थमनासन्नमकामं त्वां तपस्विनम्}
 {दयालुमनघस्पृष्टं पुराणमजरं विदुः} % १०-१९
@@ -88,7 +92,7 @@
 
 \twolineshloka
 {सप्तसामोपगीतं त्वां सप्तार्णवजलेशयम्}
-{सप्तार्चिमुखमाचख्युः सप्तलोकैकसंश्रयम्} % १०-२१
+{सप्तार्चिर्मुखमाचख्युः सप्तलोकैकसंश्रयम्} % १०-२१
 
 \twolineshloka
 {चतुर्वर्गफलं ज्ञानं कालावस्थाश्चतुर्युगाः}
@@ -112,7 +116,7 @@
 
 \twolineshloka
 {त्वय्यावेशितचित्तानां त्वत्समर्पितकर्मणाम्}
-{गतिस्त्वं वीतरागाणामभूयःसम्निवृत्तये} % १०-२७
+{गतिस्त्वं वीतरागाणामभूयःसन्निवृत्तये} % १०-२७
 
 \twolineshloka
 {प्रत्यक्षोऽप्यपरिच्छेद्यो मह्यादिर्महिमा तव}
@@ -123,7 +127,7 @@
 {अनेन वृत्तयः शेषा निवेदितफलास्त्वयि} % १०-२९
 
 \twolineshloka
-{उदधेरिव रत्नानि तेजाम्सीव विवस्वतः}
+{उदधेरिव रत्नानि तेजांसीव विवस्वतः}
 {स्तुतिभ्यो व्यतिरिच्यन्ते दूराणि चरितानि ते} % १०-३०
 
 \twolineshloka
@@ -131,7 +135,7 @@
 {लोकानुग्रह एवैको हेतुस्ते जन्मकर्मणोः} % १०-३१
 
 \twolineshloka
-{महिमानं यदुत्कीर्त्य तव सम्ह्रियते वचः}
+{महिमानं यदुत्कीर्त्य तव संह्रियते वचः}
 {श्रमेण तदशक्त्या वा न गुणानामियत्तया} % १०-३२
 
 \twolineshloka
@@ -148,7 +152,7 @@
 
 \twolineshloka
 {पुराणस्य कवेस्तस्य वर्णस्थानसमीरिता}
-{बभूव कृतसम्स्कारा चरितार्थैव भारती} % १०-३६
+{बभूव कृतसंस्कारा चरितार्थैव भारती} % १०-३६
 
 \twolineshloka
 {बभौ सदशनज्योत्स्ना सा विभोर्वदनोद्गता}
@@ -188,7 +192,7 @@
 
 \twolineshloka
 {वैमानिकाः पुण्यकृतस्त्यजन्तु मरुतां पथि}
-{पुष्पकालोकसम्क्षोभं मेघावरणतत्पराः} % १०-४६
+{पुष्पकालोकसङ्क्षोभं मेघावरणतत्पराः} % १०-४६
 
 \twolineshloka
 {मोक्ष्यध्वे स्वर्गबन्दीनां वेणीबन्धनदूषितान्}
@@ -199,16 +203,16 @@
 {अभिवृष्य मरुत्सस्यं कृष्णमेघस्तिरोदधे} % १०-४८
 
 \twolineshloka
-{पुरहूतप्रभृतयः सुरकार्योद्यतं सुराः}
+{पुरुहूतप्रभृतयः सुरकार्योद्यतं सुराः}
 {अंशैरनुययुर्विष्णुं पुष्पैर्वायुमिव द्रुमाः} % १०-४९
 
 \twolineshloka
-{अथ तस्य विशाम्पत्युरन्ते कामस्य कर्मणः}
+{अथ तस्य विशाम्पत्युरन्ते काम्यस्य कर्मणः}
 {पुरुषः प्रबभूवाग्नेर्विस्मयेन सहर्त्विजाम्} % १०-५०
 
 \twolineshloka
 {हेमपात्रगतं दोर्भ्यामादधानः पयश्चरुम्}
-{अनुप्रवेशादाद्यस्य पुम्सस्तेनापि दुर्वहम्} % १०-५१
+{अनुप्रवेशादाद्यस्य पुंसस्तेनापि दुर्वहम्} % १०-५१
 
 \twolineshloka
 {प्राजापत्योपनीतं तदन्नं प्रत्यग्रहीन्नृपः}
@@ -216,10 +220,10 @@
 
 \twolineshloka
 {अनेन कथिता राज्ञो गुणास्तस्यान्यदुर्लभाः}
-{प्रसूतिं चकमे तस्मिम्स्त्रैलोक्यप्रभवोऽपि यत्} % १०-५३
+{प्रसूतिं चकमे तस्मिंस्त्रैलोक्यप्रभवोऽपि यत्} % १०-५३
 
 \twolineshloka
-{स तेजो वैष्णवं पत्न्योर्विभेजे चरुसम्ज्ञितम्}
+{स तेजो वैष्णवं पत्न्योर्विभेजे चरुसंज्ञितम्}
 {द्यावापृथिव्योः प्रत्यग्रमहर्पतिरिवातपम्} % १०-५४
 
 \twolineshloka
@@ -227,7 +231,7 @@
 {अतः सम्भावितां ताभ्यां सुमित्रामैच्छदीश्वरः} % १०-५५
 
 \twolineshloka
-{ते बहुज्ञस्य चित्तज्ञे पत्नौ पत्युर्महीक्षितः}
+{ते बहुज्ञस्य चित्तज्ञे पत्न्यौ पत्युर्महीक्षितः}
 {चरोरर्धार्धभागाभ्यां तामयोजयतामुभे} % १०-५६
 
 \twolineshloka
@@ -244,14 +248,14 @@
 
 \twolineshloka
 {गुप्तं ददृशुरात्मानं सर्वाः स्वप्नेषु वामनैः}
-{जलजासिकदाशार्ङ्गचक्रलाञ्छितमूर्तिभिः} % १०-६०
+{जलजासिगदाशार्ङ्गचक्रलाञ्छितमूर्तिभिः} % १०-६०
 
 \twolineshloka
 {हेमपक्षप्रभाजालं गगने च वितन्वता}
 {उह्यन्ते स्म सुपर्णेन वेगाकृष्टपयोमुचा} % १०-६१
 
 \twolineshloka
-{बिभ्रत्या कौस्तुभन्यासं स्तनान्तरविलम्बितम्}
+{बिभ्रत्या कौस्तुभन्यासं स्तनान्तरविलम्बिनम्}
 {पर्युपास्यन्त लक्ष्म्या च पद्मव्यजनहस्तया} % १०-६२
 
 \twolineshloka
@@ -284,7 +288,7 @@
 
 \twolineshloka
 {कैकेय्यास्तनयो जज्ञे भरतो नाम शीलवान्}
-{जनयित्रीमलम्चक्रे यः प्रश्रय इव श्रियम्} % १०-७०
+{जनयित्रीमलञ्चक्रे यः प्रश्रय इव श्रियम्} % १०-७०
 
 \twolineshloka
 {सुतौ लक्ष्मणशत्रुघ्नौ सुमित्रा सुषुवे यमौ}
@@ -315,16 +319,16 @@
 {सन्मङ्गलोपचाराणां सैवादिरचनाऽभवत्} % १०-७७
 
 \twolineshloka
-{कुमाराः कृतसम्स्कारास्ते धात्रीस्तन्यपायिनः}
+{कुमाराः कृतसंस्कारास्ते धात्रीस्तन्यपायिनः}
 {आनन्देनाग्रजेनेव समं ववृधिरे पितुः} % १०-७८
 
 \twolineshloka
 {स्वाभाविकं विनीतत्वं तेषां विनयकर्मणा}
-{मुमूर्च्छ सहजं तेजो हविषेव हविर्भुजाम्} % १०-७९
+{मुमूर्छ सहजं तेजो हविषेव हविर्भुजाम्} % १०-७९
 
 \twolineshloka
-{परस्परविरुद्धास्ते तद्रगोरनघं कुलम्}
-{अलमुद्योतयामासुर्देवारण्यमिवर्तवः} % १०-८०
+{परस्पराविरुद्धास्ते तद्रगोरनघं कुलम्}
+{अलमुद्द्योतयामासुर्देवारण्यमिवर्तवः} % १०-८०
 
 \twolineshloka
 {समानेऽपि च सौभ्रात्रे यथोभौ रामलक्ष्मणौ}
@@ -332,7 +336,7 @@
 
 \twolineshloka
 {तेषां द्वयोर्द्वयोरैक्यं बिभिदे न कदाचन}
-{यथा वायुर्विभावस्वोर्यथा चन्द्रसमुद्रयोः} % १०-८२
+{यथा वायुविभावस्वोर्यथा चन्द्रसमुद्रयोः} % १०-८२
 
 \twolineshloka
 {ते प्रजानां प्रजानाथास्तेजसा प्रश्रयेण च}
@@ -347,8 +351,8 @@
 {तमेव चतुरन्तेशं रत्नैरिव महार्णवाः} % १०-८५
 
 \fourlineindentedshloka
-{सुरगज इव दन्तैर्भग्नदैत्यासिधारै}
-{र्नय इव पणबन्धव्यक्तयोगैरुपायैः}
+{सुरगज इव दन्तैर्भग्नदैत्यासिधारैर्-}
+{नय इव पणबन्धव्यक्तयोगैरुपायैः}
 {हरिरिव युगदीर्घैर्दोर्भिरंशैस्तदीयैः}
 {पतिरवनिपतीनां तैश्चकाशे चतुर्भिः} % १०-८६
 
