--- a/rama-charitam/raghuvamsha/raghuvamsha-transformed.tex
+++ b/rama-charitam/raghuvamsha/raghuvamsha-transformed.tex
@@ -80,281 +80,281 @@
 
 \twolineshloka
 {एकः कारणतस्तां तामवस्थां प्रतिपद्यसे}
-{नानात्वं रागसंयोगात्स्फटिकस्य्ऽएव ते स्मृतम्} % १०-१९
+{नानात्वं रागसंयोगात्स्फटिकस्य्ऽएव ते स्मृतम्} % १०-१८*
 
 \twolineshloka
 {हृदयस्थमनासन्नमकामं त्वां तपस्विनम्}
-{दयालुमनघस्पृष्टं पुराणमजरं विदुः} % १०-२०
+{दयालुमनघस्पृष्टं पुराणमजरं विदुः} % १०-१९
 
 \twolineshloka
 {सर्वज्ञस्त्वमविज्ञातः सर्वयोनिस्त्वमात्मभूः}
-{सर्वप्रभुरनीशस्त्वमेकस्त्वं सर्वरूपभाक्} % १०-२१
+{सर्वप्रभुरनीशस्त्वमेकस्त्वं सर्वरूपभाक्} % १०-२०
 
 \twolineshloka
 {सप्तसामोपगीतं त्वां सप्तार्णवजलेशयम्}
-{सप्तार्चिर्मुखमाचख्युः सप्तलोकैकसंश्रयम्} % १०-२२
+{सप्तार्चिर्मुखमाचख्युः सप्तलोकैकसंश्रयम्} % १०-२१
 
 \twolineshloka
-{चतुर्वर्गफलं ज्ञानं कालावस्था चतुर्युगा}
-{चतुर्वर्णमयो लोकस्त्वत्तः सर्वं चतुर्मुखात्} % १०-२३
+{चतुर्वर्गफलं ज्ञानं कालावस्थाश्चतुर्युगाः}
+{चतुर्वर्णमयो लोकस्त्वत्तः सर्वं चतुर्मुखात्} % १०-२२
 
 \twolineshloka
 {अभ्यासनिगृहीतेन मनसा हृदयाश्रयम्}
-{ज्योतिर्मयं विचिन्वन्ति योगिनस्त्वां विमुक्तये} % १०-२४
+{ज्योतिर्मयं विचिन्वन्ति योगिनस्त्वां विमुक्तये} % १०-२३
 
 \twolineshloka
 {अजस्य गृह्णतो जन्म निरीहस्य हतद्विषः}
-{स्वपतो जागरूकस्य याथात्म्यं वेद कस्तव} % १०-२५
+{स्वपतो जागरूकस्य याथात्म्यं वेद कस्तव} % १०-२४
 
 \twolineshloka
 {शब्दादीन्विषयान्भोक्तुं चरितुं दुश्चरं तपः}
-{पर्याप्तोऽसि प्रजाः पातुमौदासीन्येन वर्तितुम्} % १०-२६
+{पर्याप्तोऽसि प्रजाः पातुमौदासीन्येन वर्तितुम्} % १०-२५
 
 \twolineshloka
 {बहुधाप्यागमैर्भिन्नाः पन्थानः सिद्धिहेतवः}
-{त्वय्येव निपतन्त्योघा जाह्नवीया इवार्णवे} % १०-२७
+{त्वय्येव निपतन्त्योघा जाह्नवीया इवार्णवे} % १०-२६
 
 \twolineshloka
 {त्वय्यावेशितचित्तानां त्वत्समर्पितकर्मणाम्}
-{गतिस्त्वं वीतरागाणामभूयःसन्निवृत्तये} % १०-२८
+{गतिस्त्वं वीतरागाणामभूयःसन्निवृत्तये} % १०-२७
 
 \twolineshloka
 {प्रत्यक्षोऽप्यपरिच्छेद्यो मह्यादिर्महिमा तव}
-{आप्तवागनुमानाभ्यां साध्यं त्वां प्रति का कथा} % १०-२९
+{आप्तवागनुमानाभ्यां साध्यं त्वां प्रति का कथा} % १०-२८
 
 \twolineshloka
 {केवलं स्मरणेनैव पुनासि पुरुषं यतः}
-{अनेन वृत्तयः शेषा निवेदितफलास्त्वयि} % १०-३०
+{अनेन वृत्तयः शेषा निवेदितफलास्त्वयि} % १०-२९
 
 \twolineshloka
 {उदधेरिव रत्नानि तेजांसीव विवस्वतः}
-{स्तुतिभ्यो व्यतिरिच्यन्ते दूरेण चरितानि ते} % १०-३१
+{स्तुतिभ्यो व्यतिरिच्यन्ते दूरेण चरितानि ते} % १०-३०
 
 \twolineshloka
-{अनवाप्तमवाप्तव्यं न ते किचन विद्यते}
-{लोकानुग्रह एवैको हेतुस्ते जन्मकरमणोः} % १०-३२
+{अनवाप्तमवाप्तव्यं न ते किञ्चन विद्यते}
+{लोकानुग्रह एवैको हेतुस्ते जन्मकर्मणोः} % १०-३१
 
 \twolineshloka
 {महिमानं यदुत्कीर्त्य तव संह्रियते वचः}
-{श्रमेण तदशक्त्या वा न गुणानामियत्तया} % १०-३३
+{श्रमेण तदशक्त्या वा न गुणानामियत्तया} % १०-३२
 
 \twolineshloka
-{इति प्रसादयामासुस्तव संह्रियते वचः}
-{भूतार्थव्याहृतिः सा हि न स्तुतिः परमेष्ठिनः} % १०-३४
+{इति प्रसादयामासुस्ते सुरास्तमधोक्षजम्}
+{भूतार्थव्याहृतिः सा हि न स्तुतिः परमेष्ठिनः} % १०-३३
 
 \twolineshloka
 {तस्मै कुशलसम्प्रश्नव्यञ्जितप्रीतये सुराः}
-{भयमप्रलयोद्वेलादाचख्युर्नैरृतोदधेः} % १०-३५
+{भयमप्रलयोद्वेलादाचख्युर्नैरृतोदधेः} % १०-३४
 
 \twolineshloka
 {अथ वेलासमासन्नशैलरन्ध्रानुनादिना}
-{स्वरेणोवाच भगवान्परिभूतार्णवध्वनिः} % १०-३६
+{स्वरेणोवाच भगवान् परिभूतार्णवध्वनिः} % १०-३५
 
 \twolineshloka
 {पुराणस्य कवेस्तस्य वर्णस्थानसमीरिता}
-{बभूव कृतसंस्कारा चरितार्थैव भारती} % १०-३७
+{बभूव कृतसंस्कारा चरितार्थैव भारती} % १०-३६
 
 \twolineshloka
-{बभौ स दशनज्योत्स्ना सा विभोर्वदनोद्गता}
-{निर्यातशेषा चरणाद्गङ्गेवोर्ध्वप्रवर्तिनी} % १०-३८
+{बभौ सदशनज्योत्स्ना सा विभोर्वदनोद्गता}
+{निर्यातशेषा चरणाद्गङ्गेवोर्ध्वप्रवर्तिनी} % १०-३७
 
 \twolineshloka
 {जाने वो रक्षसाक्रान्तावनुभावपराक्रमौ}
-{अङ्गिनां तमसेवोभौ गुणौ प्रथ्ममध्यमौ} % १०-३९
+{अङ्गिनां तमसेवोभौ गुणौ प्रथममध्यमौ} % १०-३८
 
 \twolineshloka
-{विदितं तप्यमानं च तेन मे भुवन्त्रयम्}
-{अकामोपनतेनेव साधोर्हृदयमेनसा} % १०-४०
+{विदितं तप्यमानं च तेन मे भुवनत्रयम्}
+{अकामोपनतेनेव साधोर्हृदयमेनसा} % १०-३९
 
 \twolineshloka
 {कार्येषु चैककार्यत्वादभ्यर्थ्योऽस्मि न वज्रिणा}
-{स्वयमेव हि वातोऽग्नेः सारथ्यं प्रतिपद्यते} % १०-४१
+{स्वयमेव हि वातोऽग्नेः सारथ्यं प्रतिपद्यते} % १०-४०
 
 \twolineshloka
 {स्वासिधारापरिहृतः कामं चक्रस्य तेन मे}
-{स्थापितो दशमो मूर्धा लव्यांश इव रक्षसा} % १०-४२
+{स्थापितो दशमो मूर्धा लभ्यांश इव रक्षसा} % १०-४१
 
 \twolineshloka
 {स्रष्टुर्वरातिसर्गात्तु मया तस्य दुरात्मनः}
-{अत्यारूढं रिपोः सोढं चन्दनेव भोगिनः} % १०-४३
+{अत्यारूढं रिपोः सोढं चन्दनेनेव भोगिनः} % १०-४२
 
 \twolineshloka
 {धातारं तपसा प्रीतं ययाचे स हि राक्षसः}
-{दैवात्सर्गादवध्यत्वं मर्त्येष्वास्थापराङ्मुखः} % १०-४४
+{दैवात्सर्गादवध्यत्वं मर्त्येष्वास्थापराङ्मुखः} % १०-४३
 
 \twolineshloka
 {सोऽहं दाशरथिर्भूत्वा रणभूमेर्बलिक्षमम्}
-{करिष्यामि शरैस्तीक्ष्णैस्तच्छिरःकमलोच्चयम्} % १०-४५
+{करिष्यामि शरैस्तीक्ष्णैस्तच्छिरःकमलोच्चयम्} % १०-४४
 
 \twolineshloka
-{अचिराद्वज्वभिर्भागं कल्पितं विधिवत्पुनः}
-{मायाविभिरनालीढमादास्यध्वे मिशाचरैः} % १०-४६
+{अचिराद्यज्वभिर्भागं कल्पितं विधिवत्पुनः}
+{मायाविभिरनालीढमादास्यध्वे निशाचरैः} % १०-४५
 
 \twolineshloka
 {वैमानिकाः पुण्यकृतस्त्यजन्तु मरुतां पथि}
-{पुष्पकालोकसङ्क्षोभं मेघावरणतत्पराः} % १०-४७
+{पुष्पकालोकसङ्क्षोभं मेघावरणतत्पराः} % १०-४६
 
 \twolineshloka
-{मोष्यध्वे स्वर्गबन्दीनां वेणीबन्धानदूषितान्}
-{शापयन्त्रितपौलस्त्यबलात्कारकचग्रहैः} % १०-४८
+{मोक्ष्यध्वे स्वर्गबन्दीनां वेणीबन्धनदूषितान्}
+{शापयन्त्रितपौलस्त्यबलात्कारकचग्रहैः} % १०-४७
 
 \twolineshloka
 {रावणावग्रहक्लान्तमिति वागमृतेन सः}
-{अभिवृष्य मरुत्सस्यं कृष्णमेघस्तिरोदधे} % १०-४९
+{अभिवृष्य मरुत्सस्यं कृष्णमेघस्तिरोदधे} % १०-४८
 
 \twolineshloka
 {पुरुहूतप्रभृतयः सुरकार्योद्यतं सुराः}
-{अंशैरनुययुर्विष्णुं पुष्पैर्वायुमिव द्रुमाः} % १०-५०
+{अंशैरनुययुर्विष्णुं पुष्पैर्वायुमिव द्रुमाः} % १०-४९
 
 \twolineshloka
 {अथ तस्य विशाम्पत्युरन्ते काम्यस्य कर्मणः}
-{पुरुषः प्रबभूवाग्नेर्विस्मयेन सहर्त्विजाम्} % १०-५१
+{पुरुषः प्रबभूवाग्नेर्विस्मयेन सहर्त्विजाम्} % १०-५०
 
 \twolineshloka
 {हेमपात्रगतं दोर्भ्यामादधानः पयश्चरुम्}
-{अनुप्रवेशादाद्यस्य पुंसस्तेनापि दुर्वहम्} % १०-५२
+{अनुप्रवेशादाद्यस्य पुंसस्तेनापि दुर्वहम्} % १०-५१
 
 \twolineshloka
-{प्राजापत्योपनीतं तद्(?) अन्नं प्रत्यग्रहीन्नृपः}
-{वृषेव पयसां सारमाविष्कृतमुदन्वता} % १०-५३
+{प्राजापत्योपनीतं तदन्नं प्रत्यग्रहीन्नृपः}
+{वृषेव पयसां सारमाविष्कृतमुदन्वता} % १०-५२
 
 \twolineshloka
 {अनेन कथिता राज्ञो गुणास्तस्यान्यदुर्लभाः}
-{प्रसूतिं चकमे तस्मिंस्त्रैलोक्यप्रभवोऽपि यत्} % १०-५४
+{प्रसूतिं चकमे तस्मिंस्त्रैलोक्यप्रभवोऽपि यत्} % १०-५३
 
 \twolineshloka
-{स तेजो वैश्नवं पत्न्योर्विभेजे चरुसज्ञितम्}
-{द्यावापृथिव्योः प्रत्यग्रमहर्पतिरिवातपम्} % १०-५५
+{स तेजो वैष्णवं पत्न्योर्विभेजे चरुसंज्ञितम्}
+{द्यावापृथिव्योः प्रत्यग्रमहर्पतिरिवातपम्} % १०-५४
 
 \twolineshloka
 {अर्चिता तस्य कौसल्या प्रिया केकयवंशजा}
-{अतः सम्भावितां ताभ्यां सुमित्रामच्छदीश्वरः} % १०-५६
+{अतः सम्भावितां ताभ्यां सुमित्रामैच्छदीश्वरः} % १०-५५
 
 \twolineshloka
-{ते बहुज्ञस्य चित्तज्ञे पत्न्यौ पत्युर्महीषितः}
-{चरोरर्धार्धभागाभ्यां तामयोजयतामुभे} % १०-५७
+{ते बहुज्ञस्य चित्तज्ञे पत्न्यौ पत्युर्महीक्षितः}
+{चरोरर्धार्धभागाभ्यां तामयोजयतामुभे} % १०-५६
 
 \twolineshloka
 {सापि प्रणयवत्यासीत्सपत्न्योरुभयोरपि}
-{भ्रमरी वारणस्येव मदनिस्यन्दलेखयोः} % १०-५८
+{भ्रमरी वारणस्येव मदनिस्यन्दलेखयोः} % १०-५७
 
 \twolineshloka
 {ताभिर्गर्भः प्रजाभूत्यै दध्रे देवांशसम्भवः}
-{सौरीभिरिव नाडीभिरमृताख्याभिरम्मयः} % १०-५९
+{सौरीभिरिव नाडीभिरमृताख्याभिरम्मयः} % १०-५८
 
 \twolineshloka
 {सममापन्नसत्त्वास्ता रेजुरापाण्डुरत्विषः}
-{अन्तर्गतफलारम्भाः सस्यानामिव सम्पदः} % १०-६०
+{अन्तर्गतफलारम्भाः सस्यानामिव सम्पदः} % १०-५९
 
 \twolineshloka
 {गुप्तं ददृशुरात्मानं सर्वाः स्वप्नेषु वामनैः}
-{जलजासिगदाशार्ङ्गचक्रलाञ्छितमूर्तिभिः} % १०-६१
+{जलजासिगदाशार्ङ्गचक्रलाञ्छितमूर्तिभिः} % १०-६०
 
 \twolineshloka
 {हेमपक्षप्रभाजालं गगने च वितन्वता}
-{उह्यन्ते स्म सुपर्णेन वेगाकृष्टपयौमुचा} % १०-६२
+{उह्यन्ते स्म सुपर्णेन वेगाकृष्टपयोमुचा} % १०-६१
 
 \twolineshloka
 {बिभ्रत्या कौस्तुभं न्यासं स्तनान्तरविलम्बिनम्}
-{पर्युपास्यन्त लक्ष्म्या च पद्मव्यजनहस्तया} % १०-६३
+{पर्युपास्यन्त लक्ष्म्या च पद्मव्यजनहस्तया} % १०-६२
 
 \twolineshloka
 {कृताभिषेकैर्दिव्यायां त्रिस्रोतसि च सप्तभिः}
-{ब्रह्म र्षिभिः परं ब्रह्म गृणध्बिरुपतस्थिरे} % १०-६४
+{ब्रह्मर्षिभिः परं ब्रह्म गृणद्भिरुपतस्थिरे} % १०-६३
 
 \twolineshloka
 {ताभ्यस्तथाविधान्स्वप्नाञ्छ्रुत्वा प्रीतो हि पार्थिवः}
-{मेने परार्ध्यमात्मानं गुरुत्वेन जग्द्गुरोः} % १०-६५
+{मेने परार्ध्यमात्मानं गुरुत्वेन जगद्गुरोः} % १०-६४
 
 \twolineshloka
-{विभक्तात्मा विभुस्तासामेकः कुषिष्वनेकधा}
-{उवास प्रतिमाचन्द्रः प्रसन्नानामपामिव} % १०-६६
+{विभक्तात्मा विभुस्तासामेकः कुक्षिष्वनेकधा}
+{उवास प्रतिमाचन्द्रः प्रसन्नानामपामिव} % १०-६५
 
 \twolineshloka
 {अथाग्रमहिषी राज्ञः प्रसूतिसमये सती}
-{पुत्रं तमोऽपहं लेभे नक्तं ज्योतिरिवौषधिः} % १०-६७
+{पुत्रं तमोऽपहं लेभे नक्तं ज्योतिरिवौषधिः} % १०-६६
 
 \twolineshloka
 {राम इत्यभिरामेण तेनाप्रतिम तेजसा}
-{नामधेयं गुरुश्चक्रे जगत्प्रथममङ्गलम्} % १०-६८
+{नामधेयं गुरुश्चक्रे जगत्प्रथममङ्गलम्} % १०-६७
 
 \twolineshloka
 {रघुवंशप्रदीपेन तेनाप्रतिम तेजसा}
-{रक्षागृहगता दीपाः प्रत्यादिष्ट इवाभवन्} % १०-६९
+{रक्षागृहगता दीपाः प्रत्यादिष्ट इवाभवन्} % १०-६८
 
 \twolineshloka
 {शय्यागतेन रामेण माता शातोदरी बभौ}
-{सैकताम्भोजबलिना जाह्नवीव शरत्कृशा} % १०-७०
+{सैकताम्भोजबलिना जाह्नवीव शरत्कृशा} % १०-६९
 
 \twolineshloka
 {कैकेय्यास्तनयो जज्ञे भरतो नाम शीलवान्}
-{जनयित्रीमलचक्रे यः प्रश्रय इव श्रियम्} % १०-७१
+{जनयित्रीमलञ्चक्रे यः प्रश्रय इव श्रियम्} % १०-७०
 
 \twolineshloka
 {सुतौ लक्ष्मणशत्रुघ्नौ सुमित्रा सुषुवे यमौ}
-{सम्यगागमिता विद्या प्रबोधविनयाविव} % १०-७२
+{सम्यगागमिता विद्या प्रबोधविनयाविव} % १०-७१
 
 \twolineshloka
 {निर्दोषमभवत्सर्वमाविष्कृतगुणं जगत्}
-{अन्वगादिव हि स्वर्गो गां गतं पुरुषोत्तमम्} % १०-७३
+{अन्वगादिव हि स्वर्गो गां गतं पुरुषोत्तमम्} % १०-७२
 
 \twolineshloka
 {तस्योदये चतुर्मूर्तेः पौलस्त्यचकितेश्वराः}
-{विरजस्कैर्नभस्वद्भिर्दिश उच्छ्वसिता इव} % १०-७४
+{विरजस्कैर्नभस्वद्भिर्दिश उच्छ्वसिता इव} % १०-७३
 
 \twolineshloka
 {कृशानुरपधूमत्वात्प्रसन्नत्वात्प्रभाकरः}
-{रक्षिविप्रकृतावास्तामपविद्धशुचाविव} % १०-७५
+{रक्षोविप्रकृतावास्तामपविद्धशुचाविव} % १०-७४
 
 \twolineshloka
 {दशाननकिरीटेभ्यस्तत्क्षणं राक्षसश्रियः}
-{मणिव्याजेन पर्यस्ताः पृथिव्यामश्रुबिन्दवः} % १०-७६
+{मणिव्याजेन पर्यस्ताः पृथिव्यामश्रुबिन्दवः} % १०-७५
 
 \twolineshloka
 {पुत्रजन्मप्रवेश्यानां तूर्याणां तस्य पुत्रिणः}
-{आरम्भं प्रथमं चक्रुर्देवधुन्दुभयो दिवि} % १०-७७
+{आरम्भं प्रथमं चक्रुर्देवदुन्दुभयो दिवि} % १०-७६
 
 \twolineshloka
 {सन्तानकमयी वृष्टिर्भवने चास्य पेतुषी}
-{समङ्गलोपचाराणां सैवादिरचनाभवत्} % १०-७८
+{सन्मङ्गलोपचाराणां सैवादिरचनाऽभवत्} % १०-७७
 
 \twolineshloka
-{कुमाराः कृतसंस्कारास्ते धात्रिस्तन्य पायिनः}
-{आनन्देनाग्रजेनेव समं ववृधिरे पितुः} % १०-७९
+{कुमाराः कृतसंस्कारास्ते धात्रीस्तन्यपायिनः}
+{आनन्देनाग्रजेनेव समं ववृधिरे पितुः} % १०-७८
 
 \twolineshloka
-{स्वाभाविकं विनीतत्वं तेषं विनयकर्मणा}
-{मुमूर्छ सहजं तेजो हविषेव हविर्भुजाम्} % १०-८०
+{स्वाभाविकं विनीतत्वं तेषां विनयकर्मणा}
+{मुमूर्छ सहजं तेजो हविषेव हविर्भुजाम्} % १०-७९
 
 \twolineshloka
 {परस्पराविरुद्धास्ते तद्रघोरनघं कुलम्}
-{अलमुद्द्योतयामासुर्देवारण्यमिवर्तवः} % १०-८१
+{अलमुद्द्योतयामासुर्देवारण्यमिवर्तवः} % १०-८०
 
 \twolineshloka
 {समानेऽपि हि सौभ्रात्रे यथोभौ रामलक्ष्मणौ}
-{तथा भरतशत्रुघ्नौ प्रीत्या द्वन्द्वं बभूवतुः} % १०-८२
+{तथा भरतशत्रुघ्नौ प्रीत्या द्वन्द्वं बभूवतुः} % १०-८१
 
 \twolineshloka
 {तेषां द्वयोर्द्वयोरैक्यं बिभिदे न कदाचन}
-{यथा वायुविभावस्वोर्यथा चन्द्रसमुद्रयोः} % १०-८३
+{यथा वायुविभावस्वोर्यथा चन्द्रसमुद्रयोः} % १०-८२
 
 \twolineshloka
 {ते प्रजानां प्रजानाथास्तेजसा प्रश्रयेण च}
-{मनो जह्रुर्निदाघान्ते श्यामाभ्रा दिवसा इव} % १०-८४
+{मनो जह्रुर्निदाघान्ते श्यामाभ्रा दिवसा इव} % १०-८३
 
 \twolineshloka
 {स चतुर्धा बभौ व्यस्तः प्रसवः पृथिवीपतेः}
-{धर्मार्थकाममोक्षाणामवतार इवाङ्गभाक्} % १०-८५
+{धर्मार्थकाममोक्षाणामवतार इवाङ्गभाक्} % १०-८४
 
 \twolineshloka
 {गुणैराराधयामासुस्ते गुरुं गुरुवत्सलाः}
-{तमेव चतुर्नतेशं रत्नैरिव महार्णवाः} % १०-८६
+{तमेव चतुर्नतेशं रत्नैरिव महार्णवाः} % १०-८५
 
 \fourlineindentedshloka
 {सुरगज इव दन्तैर्भग्नदैत्यासिधारै-}
 {र्नय इव पणबन्धव्यक्तयोगैरुपायैः}
 {हरिरिव युगदीर्घैर्दोर्भिरंषैस्तदीयैः}
-{पतिरवनिपतीनां तैश्चकाशे चतुर्भिः} % १०-८७
+{पतिरवनिपतीनां तैश्चकाशे चतुर्भिः} % १०-८६
 
 ॥इति श्री-महाकवि-कालिदास-कृत-रघुवंश-महाकाव्ये दशमः सर्गः॥
 
