--- a/rama-charitam/harivamsha/ramakatha.tex
+++ b/rama-charitam/harivamsha/ramakatha.tex
@@ -158,7 +158,7 @@
 
 \ldots
 
-॥इति श्रीमहाभारते खिलभागे हरिवंशे हरिवंशपर्वणि प्रादुर्भावानुसंग्रहो नामैकचत्वारिंशोऽध्यायः॥४१॥
+॥इति श्रीमहाभारते खिलभागे हरिवंशे हरिवंशपर्वणि प्रादुर्भावानुसङ्ग्रहो नामैकचत्वारिंशोऽध्यायः॥४१॥
 
 
 \closesection
