--- a/rama-charitam/narayaniyam/dashakam-34.tex
+++ b/rama-charitam/narayaniyam/dashakam-34.tex
@@ -43,9 +43,9 @@
 {न्नत्वा तद्वाक्यहेतोरतिसुखमवसश्चित्रकूटे गिरीन्द्रे} % ॥५॥
 
 \fourlineindentedshloka
-{श्रुत्वा पुत्रार्तिखिन्नं खलु भरतमुखात् स्वर्गयातं स्वतातम्}
+{श्रुत्वा पुत्रार्तिखिन्नं खलु भरतमुखात् स्वर्गयातं स्वतातं}
 {तप्तो दत्त्वाम्बु तस्मै निदधिथ भरते पादुकां मेदिनीं च}
-{अत्रिं नत्वाथ गत्वा वनमतिविपुलां दण्डकां चण्डकायम्}
+{अत्रिं नत्वाथ गत्वा वनमतिविपुलां दण्डकां चण्डकायं}
 {हत्वा दैत्यं विराधं सुगतिमकलयश्चारु भोः शारभङ्गीम्} % ॥६॥
 
 \fourlineindentedshloka
