--- a/ramayana-ratnakara-mulam.tex
+++ b/ramayana-ratnakara-mulam.tex
@@ -116,6 +116,11 @@
     \sect{वराह-पुराणम्}
     \input{anubandha/varaha-puranam/varaha-puranam-dhyanam.tex}
     \closesection
+    % \chapt{रामायण-माहात्म्यम्}
+    \input{anubandha/ramayana-mahatmyam/skanda-puranam-purana-vaibhava-khanda.tex}
+    \input{anubandha/ramayana-mahatmyam/skanda-puranam-uttara-khanda.tex}
+    \closesection
+
     \chapt{नामावल्यः}
     \let\chapt\sect
     \input{../namavali-manjari/100/Rama_108}
