--- a/frontmatter/preface-mulam.tex
+++ b/frontmatter/preface-mulam.tex
@@ -47,9 +47,11 @@
 {रामं रामानुजं सीतां भरतं भरतानुजम्}
 {सुग्रीवं वायुसूनुं च प्रणमामि पुनः पुनः}
 
-\twolineshloka*
-{नमोऽस्तु रामाय सलक्ष्मणाय देव्यै च तस्यै जनकात्मजायै}
-{नमोऽस्तु रुद्रेन्द्रयमानिलेभ्यो नमोऽस्तु चन्द्रार्कमरुद्गणेभ्यः}
+\fourlineindentedshloka*
+{नमोऽस्तु रामाय सलक्ष्मणाय}
+{देव्यै च तस्यै जनकात्मजायै}
+{नमोऽस्तु रुद्रेन्द्रयमानिलेभ्यो}
+{नमोऽस्तु चन्द्रार्कमरुद्गणेभ्यः}
 
 यथा श्रीमद्भगवद्\-गीतायां भगवान् श्रीकृष्ण आह, ``कथयन्तश्च मां नित्यं तुष्यन्ति च रमन्ति च॥'' तथा वयं सर्वेऽपि रामकथामृतं श्रुत्वा परस्परं च कथयित्वा रामस्य अनन्तकल्याणगुणान् अनुभूय तुष्टिं प्राप्नुयामः! बलं विष्णोः प्रवर्धताम्!\\
 
