--- a/ramayana-ratnakara-mulam.tex
+++ b/ramayana-ratnakara-mulam.tex
@@ -84,6 +84,7 @@
     \input{katha/padma-puranam/yajna-nivaranam}
     \input{katha/padma-puranam/vamana-prathishtha}
     \input{katha/padma-puranam/rama-ashvamedha-prakaranam}
+    \input{katha/padma-puranam/vijaya-ekadashi-mahatymam}
     \input{katha/vishnudharmottara-puranam/bharata-prasthana}
     \input{katha/shiva-puranam/rama-pariksha}
     \chapt{स्कन्द-पुराणम्}
