--- a/source/padma-puranam/chaps.tex
+++ b/source/padma-puranam/chaps.tex
@@ -8802,7 +8802,7 @@
 
 \twolineshloka
 {सच्छिन्नधन्वा विरथो हताश्वो हतसारथिः}
-{महतीं स गदां धृत्वा योद्घुकामोऽभ्युपेयिवान्}% ४५
+{महतीं स गदां धृत्वा योद्धुकामोऽभ्युपेयिवान्}% ४५
 
 \twolineshloka
 {तमायान्तं समालक्ष्य गदायुद्धविशारदम्}
@@ -10565,7 +10565,7 @@
 {तस्य पापं ममैवास्तु चेत्कुर्यामनृतं वचः}% ५२
 
 \twolineshloka
-{यद्घ्राणान्नरकं गच्छेत्स्पर्शनाच्चापि रौरवम्}
+{यद् घ्राणान्नरकं गच्छेत्स्पर्शनाच्चापि रौरवम्}
 {तां पिबेन्मदिरां यो वा जिह्वास्वादेन लोलुपः}% ५३
 
 \twolineshloka
@@ -13652,7 +13652,7 @@
 
 \twolineshloka
 {सर्वं शंसत मे तथ्यं यथा ज्ञात्वा व्रजामि तम्}
-{निहत्य बद्ध्वा चायामि युष्मद्घातकमुन्मदम्}% ५४
+{निहत्य बद्ध्वा चायामि युष्मद् घातकमुन्मदम्}% ५४
 
 \twolineshloka
 {इति वाक्यं समाकर्ण्य तुरासाहं सुरोत्तमाः}
